<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip"
    tools:context=".Localizacion" >

    <TextView
        style="@style/TextoAsteroides"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:gravity="center"
        android:text="@string/asteroides"
        android:textSize="25sp " />
"

    <Button
        android:id="@+id/Button01"
        style="@style/TextoAsteroides.Boton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xogar" />

    <Button
        android:id="@+id/Button02"
        style="@style/TextoAsteroides.Boton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/configurar" />

    <Button
        android:id="@+id/Button03"
        style="@style/TextoAsteroides.Boton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de" />

    <Button
        android:id="@+id/Button04"
        style="@style/TextoAsteroides.Boton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sair" />

</LinearLayout>